<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity">

    <ImageView
        android:layout_alignParentTop="true"
        android:layout_above="@+id/signin_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:src="@drawable/logo_title" />

    <LinearLayout
        android:id="@+id/signin_layout"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="10dp"
            >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/signin_email"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/signin_facebook"
            android:textColor="@color/colorWhite"
            android:background="@drawable/btn_signin_facebook"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/signin_google"
            android:textColor="@color/colorWhite"
            android:background="@drawable/btn_signin_google"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"/>

    </LinearLayout>
</RelativeLayout>