<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<!--개인 계정, 팔로워 등-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <ImageView
            android:id="@+id/account_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_account"
            android:layout_alignParentLeft="true"/>
        <Button
            android:id="@+id/account_follow_signout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/follow"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/account_profile"/>

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/account_profile"
            android:layout_above="@id/account_follow_signout">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post"/>
                <TextView
                    android:id="@+id/account_post_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/count_0"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/follower"/>
                <TextView
                    android:id="@+id/account_follower_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/count_0"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following"/>
                <TextView
                    android:id="@+id/account_following_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/count_0"/>

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/account_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</LinearLayout>